# Paper2Skill

./: .env.example  .gitignore  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  README.md  USAGE.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: demo.py  sample_paper.md  validate_requirements.py
paper2skill/: __init__.py  main.py
paper2skill/agents/: __init__.py  nodes.py  state.py  workflow.py
paper2skill/generators/: __init__.py  skill_generator.py
paper2skill/loaders/: __init__.py  document_loader.py
paper2skill/utils/: __init__.py  config.py  llm.py
tests/: test_config.py  test_generators.py  test_loaders.py  test_workflow.py
